build/log/idf_py_stdout_output_7372
[1/12] Building C object esp-idf/st7789/CMakeFiles/__idf_st7789.dir/src/st7789.c.obj
FAILED: esp-idf/st7789/CMakeFiles/__idf_st7789.dir/src/st7789.c.obj 
/home/ivanool/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ivanool/Escritorio/KANA/TOHA/build/config -I/home/ivanool/Escritorio/KANA/TOHA/components/st7789/include -I/home/ivanool/esp/esp-idf/components/newlib/platform_include -I/home/ivanool/esp/esp-idf/components/freertos/config/include -I/home/ivanool/esp/esp-idf/components/freertos/config/include/freertos -I/home/ivanool/esp/esp-idf/components/freertos/config/xtensa/include -I/home/ivanool/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/ivanool/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/ivanool/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/ivanool/esp/esp-idf/components/freertos/esp_additions/include -I/home/ivanool/esp/esp-idf/components/esp_hw_support/include -I/home/ivanool/esp/esp-idf/components/esp_hw_support/include/soc -I/home/ivanool/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/ivanool/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/ivanool/esp/esp-idf/components/heap/include -I/home/ivanool/esp/esp-idf/components/log/include -I/home/ivanool/esp/esp-idf/components/soc/include -I/home/ivanool/esp/esp-idf/components/soc/esp32 -I/home/ivanool/esp/esp-idf/components/soc/esp32/include -I/home/ivanool/esp/esp-idf/components/hal/platform_port/include -I/home/ivanool/esp/esp-idf/components/hal/esp32/include -I/home/ivanool/esp/esp-idf/components/hal/include -I/home/ivanool/esp/esp-idf/components/esp_rom/include -I/home/ivanool/esp/esp-idf/components/esp_rom/include/esp32 -I/home/ivanool/esp/esp-idf/components/esp_rom/esp32 -I/home/ivanool/esp/esp-idf/components/esp_common/include -I/home/ivanool/esp/esp-idf/components/esp_system/include -I/home/ivanool/esp/esp-idf/components/esp_system/port/soc -I/home/ivanool/esp/esp-idf/components/esp_system/port/include/private -I/home/ivanool/esp/esp-idf/components/xtensa/esp32/include -I/home/ivanool/esp/esp-idf/components/xtensa/include -I/home/ivanool/esp/esp-idf/components/xtensa/deprecated_include -I/home/ivanool/esp/esp-idf/components/lwip/include -I/home/ivanool/esp/esp-idf/components/lwip/include/apps -I/home/ivanool/esp/esp-idf/components/lwip/include/apps/sntp -I/home/ivanool/esp/esp-idf/components/lwip/lwip/src/include -I/home/ivanool/esp/esp-idf/components/lwip/port/include -I/home/ivanool/esp/esp-idf/components/lwip/port/freertos/include -I/home/ivanool/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/ivanool/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/ivanool/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/ivanool/esp/esp-idf/components/driver/include -I/home/ivanool/esp/esp-idf/components/driver/deprecated -I/home/ivanool/esp/esp-idf/components/driver/analog_comparator/include -I/home/ivanool/esp/esp-idf/components/driver/dac/include -I/home/ivanool/esp/esp-idf/components/driver/gpio/include -I/home/ivanool/esp/esp-idf/components/driver/gptimer/include -I/home/ivanool/esp/esp-idf/components/driver/i2c/include -I/home/ivanool/esp/esp-idf/components/driver/i2s/include -I/home/ivanool/esp/esp-idf/components/driver/ledc/include -I/home/ivanool/esp/esp-idf/components/driver/mcpwm/include -I/home/ivanool/esp/esp-idf/components/driver/parlio/include -I/home/ivanool/esp/esp-idf/components/driver/pcnt/include -I/home/ivanool/esp/esp-idf/components/driver/rmt/include -I/home/ivanool/esp/esp-idf/components/driver/sdio_slave/include -I/home/ivanool/esp/esp-idf/components/driver/sdmmc/include -I/home/ivanool/esp/esp-idf/components/driver/sigma_delta/include -I/home/ivanool/esp/esp-idf/components/driver/spi/include -I/home/ivanool/esp/esp-idf/components/driver/temperature_sensor/include -I/home/ivanool/esp/esp-idf/components/driver/touch_sensor/include -I/home/ivanool/esp/esp-idf/components/driver/twai/include -I/home/ivanool/esp/esp-idf/components/driver/uart/include -I/home/ivanool/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/ivanool/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/ivanool/esp/esp-idf/components/esp_pm/include -I/home/ivanool/esp/esp-idf/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ivanool/Escritorio/KANA/TOHA=. -fmacro-prefix-map=/home/ivanool/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/st7789/CMakeFiles/__idf_st7789.dir/src/st7789.c.obj -MF esp-idf/st7789/CMakeFiles/__idf_st7789.dir/src/st7789.c.obj.d -o esp-idf/st7789/CMakeFiles/__idf_st7789.dir/src/st7789.c.obj -c /home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c
/home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c: In function 'send_data':
/home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c:193:1: error: expected declaration or statement at end of input
  193 | }
      | ^
/home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c: At top level:
/home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c:186:6: warning: 'draw_rectangle' defined but not used [-Wunused-function]
  186 | void draw_rectangle(uint16_t x1, uint16_t y1, uint16_t x2, uint16_t y2, uint16_t color){
      |      ^~~~~~~~~~~~~~
/home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c:180:6: warning: 'draw_pixel' defined but not used [-Wunused-function]
  180 | void draw_pixel(uint16_t x, uint16_t y, uint16_t color){
      |      ^~~~~~~~~~
/home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c:165:10: warning: 'rgb888_to_rgb565' defined but not used [-Wunused-function]
  165 | uint16_t rgb888_to_rgb565(uint8_t r, uint8_t g, uint8_t b) {
      |          ^~~~~~~~~~~~~~~~
/home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c:143:6: warning: 'spi_init' defined but not used [-Wunused-function]
  143 | void spi_init() {
      |      ^~~~~~~~
/home/ivanool/Escritorio/KANA/TOHA/components/st7789/src/st7789.c:117:6: warning: 'INIT' defined but not used [-Wunused-function]
  117 | void INIT() {
      |      ^~~~
[2/12] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/TOHA.c.obj
[3/12] Performing build step for 'bootloader'
[1/1] cd /home/ivanool/Escritorio/KANA/TOHA/build/bootloader/esp-idf/esptool_py && /home/ivanool/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/ivanool/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ivanool/Escritorio/KANA/TOHA/build/bootloader/bootloader.bin
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
ninja: build stopped: subcommand failed.
